--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
         "socialStatus": "Social Status",
         "married": "Married",
         "single": "Single",
+        "widower": "Widower",
         "notes": "Notes",
         "addBooking": "Add Booking",
         "addChild": "Add Child",
@@ -26,7 +27,9 @@
         "needChildBed": "Do you want a separate bed for the child?",
         "confirmDelete": "Confirm Delete",
         "sureToDelete": "Are you sure you want to delete this item ?",
-        "cancel": "Cancel"
+        "cancel": "Cancel",
+        "maximumPersons": "The maximum is 5 persons",
+        "save": "Save"
     },
     "languages": {
         "arabic": "العربية",
@@ -62,7 +65,8 @@
         "createdSuccessfully": "Created Successfully",
         "updatedSuccessfully": "Updated Successfully",
         "removedSuccessfully": "Removed Successfully",
-        "bookedSuccessfully": "Booked Successfully"
+        "bookedSuccessfully": "Booked Successfully",
+        "settingsSavedSuccessfully": "Settings saved successfully"
     },
     "validations": {
         "requiredField": "This field is required",
@@ -75,5 +79,14 @@
         "arabicFullName": "The full name is in Arabic",
         "englishMobileNumber": "Mobile number in English",
         "transportation": "Transportation to the conference"
+    },
+    "settings": {
+        "title": "Conference Name",
+        "image": "Image",
+        "generalAlerts": "General Alerts",
+        "priceDetails": "Price Details",
+        "importantDates": "Important Dates",
+        "firstReservationDate": "The first reservation date",
+        "lastReservationDate": "The latest reservation date"
     }
 }
