Refactor buses, address, ticket

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -4,8 +4,7 @@
         "language": "اللغة",
         "users": "المستخدمين",
         "conferencesReservation": "موقع حجز المؤتمرات",
-        "arName": "الاسم باللغة العربية",
-        "enName": "الاسم باللغة الإنجليزية",
+        "name": "الاسم",
         "birthDate": "تاريخ الميلاد",
         "gender": "النوع",
         "male": "ذكر",
@@ -20,8 +19,8 @@
         "AddAdult": "إضافة فرد",
         "childInfo": "الأطفال من سن 4 سنوات إلي سن أقل من 12 سنة",
         "adultInfo": "البالغين من فوق 12 سنة",
-        "individualNo": "فرد رقم",
-        "childNo": "طفل رقم",
+        "individual": "فرد",
+        "child": "طفل",
         "yes": "نعم",
         "no": "لا",
         "needChildBed": "هل تريد سرير منفصل للطفل ؟",
@@ -29,7 +28,11 @@
         "sureToDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر ؟",
         "cancel": "إلغاء",
         "maximumPersons": "الحد الأقصي هو 5 أشخاص",
-        "save": "حفظ"
+        "save": "حفظ",
+        "price": "الثمن",
+        "update": "تعديل",
+        "add": "إضافة",
+        "egp": "جنيه"
     },
     "languages": {
         "arabic": "العربية",
@@ -53,12 +56,10 @@
         "rest": "الباقي"
     },
     "bus": {
-        "add": "إضافة أتوبيس",
-        "update": "تعديل الأتوبيس"
+        "add": "إضافة أتوبيس"
     },
     "address": {
         "add": "إضافة عنوان",
-        "update": "تعديل العنوان",
         "title": "العنوان"
     },
     "notifications": {
