--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,8 +4,7 @@
         "language": "Language",
         "users": "Users",
         "conferencesReservation": "Conferences Reservation",
-        "arName": "Arabic Name",
-        "enName": "English Name",
+        "name": "Name",
         "birthDate": "BirthDate",
         "gender": "Gender",
         "male": "Male",
@@ -20,8 +19,8 @@
         "AddAdult": "Add Adult",
         "childInfo": "Children from 4 years old to under 12 years old",
         "adultInfo": "Adults over 12 years old",
-        "individualNo": "Individual No",
-        "childNo": "Child No",
+        "individual": "Individual",
+        "child": "Child",
         "yes": "Yes",
         "no": "No",
         "needChildBed": "Do you want a separate bed for the child?",
@@ -29,7 +28,11 @@
         "sureToDelete": "Are you sure you want to delete this item ?",
         "cancel": "Cancel",
         "maximumPersons": "The maximum is 5 persons",
-        "save": "Save"
+        "save": "Save",
+        "price": "Price",
+        "update": "Update",
+        "add": "Add",
+        "egp": "EGP"
     },
     "languages": {
         "arabic": "العربية",
@@ -53,12 +56,10 @@
         "rest": "The Rest"
     },
     "bus": {
-        "add": "Add Bus",
-        "update": "Update Bus"
+        "add": "Add Bus"
     },
     "address": {
         "add": "Add Address",
-        "update": "Update Address",
         "title": "Address"
     },
     "notifications": {
