--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,7 +36,16 @@
         "mobile": "Mobile Number",
         "room": "Room",
         "age": "Age",
-        "bookingStatus": "Booking Status"
+        "bookingStatus": "Booking Status",
+        "total": "Total",
+        "adultsCount": "Adults Count",
+        "childrenCount": "Children Count",
+        "bookingType": "Booking Type",
+        "bookingDate": "Booking Date",
+        "paid": "Paid",
+        "totalCost": "Total",
+        "remaining": "Remaining",
+        "group": "Group"
     },
     "languages": {
         "arabic": "العربية",
@@ -95,7 +104,7 @@
         "lastReservationDate": "The latest reservation date",
         "agreeTerms": "Agree to the terms and abide by all warnings"
     },
-    "ticketStatus": {
+    "bookingStatus": {
         "new": "New",
         "confirmed": "Confirmed",
         "duplicated": "Duplicated",
