add admin notes in primary table

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -50,6 +50,7 @@
         "delete": "حذف",
         "noDataFound": "لا توجد بيانات",
         "adminNotes": "ملاحظات المسئول",
+        "userNotes": "ملاحظات المستخدم",
         "logout": "تسجيل الخروج",
         "confirmation": "تأكيد",
         "sureToLogout": "هل أنت متأكد أنك تريد تسجيل الخروج ؟",
