Add last updated by, last updated date

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -72,7 +72,9 @@
         "transportationName": "المواصلات",
         "all": "الكل",
         "birthDateMonth": "عيد الميلاد",
-        "ageRange": "الفئة العمرية"
+        "ageRange": "الفئة العمرية",
+        "lastUpdateDate": "تاريخ آخر تحديث",
+        "lastUpdatedBy": "آخر تحديث بواسطة"
     },
     "languages": {
         "arabic": "العربية",
