- Make total without deleted- Prevent add room to deleted member- Add 2 options in advanced search
- Improvement UI

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -157,7 +157,8 @@
         "confirmed": "مؤكد",
         "duplicated": "مكرر",
         "canceled": "ملغي",
-        "waiting": "قائمة الإنتظار"
+        "waiting": "قائمة الإنتظار",
+        "deleted": "محذوف"
     },
     "advancedFilter": {
         "advancedFilter": "البحث المتقدم",
