--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -17,8 +17,8 @@
         "addBooking": "إضافة حجز",
         "addChild": "إضافة طفل",
         "AddAdult": "إضافة فرد",
-        "childInfo": "الأطفال من سن 4 سنوات إلي سن أقل من 12 سنة",
-        "adultInfo": "البالغين من فوق 12 سنة",
+        "childInfo": "من 4 : 8 سنوات (نصف إشتراك)",
+        "adultInfo": "من سن 8 سنوات فرد كامل",
         "individual": "فرد",
         "child": "طفل",
         "yes": "نعم",
