Change the reservation way

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,177 +1,187 @@
 {
-    "common": {
-        "dashboard": "الملخص",
-        "language": "اللغة",
-        "users": "المستخدمين",
-        "conferencesReservation": "موقع حجز المؤتمرات",
-        "name": "الاسم",
-        "birthDate": "تاريخ الميلاد",
-        "gender": "النوع",
-        "male": "ذكر",
-        "female": "أنثي",
-        "socialStatus": "الحالة الإجتماعية",
-        "married": "متزوج",
-        "single": "أعزب",
-        "widower": "أرمل",
-        "notes": "ملاحظات",
-        "addBooking": "إضافة حجز",
-        "addChild": "إضافة طفل",
-        "AddAdult": "إضافة فرد",
-        "childInfo": "من 4 : 8 سنوات (نصف إشتراك)",
-        "adultInfo": "من سن 8 سنوات فرد كامل",
-        "individual": "فرد",
-        "child": "طفل",
-        "yes": "نعم",
-        "no": "لا",
-        "needChildBed": "هل تريد سرير منفصل للطفل ؟",
-        "confirmDelete": "تأكيد الحذف",
-        "confirmBooking": "تأكيد الحجز",
-        "sureToDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر ؟",
-        "sureToBook": "أنت علي وشك القيام بحجز <b> { isGrouping, select, true{مجموعة} other{فرد} } </b>",
-        "completeBooking": "هل تريد إكمال عملية الحجز ؟",
-        "cancel": "إلغاء",
-        "maximumPersons": "الحد الأقصي هو 5 أشخاص",
-        "save": "حفظ",
-        "price": "الثمن",
-        "update": "تعديل",
-        "add": "إضافة",
-        "egp": "جنيه",
-        "mobile": "رقم الموبايل",
-        "room": "الغرفة",
-        "age": "السن",
-        "bookingStatus": "حالة الحجز",
-        "total": "العدد الكلي",
-        "adultsCount": "عدد البالغين",
-        "childrenCount": "عدد الأطفال",
-        "bookingType": "نوع الحجز",
-        "bookingDate": "تاريخ الحجز",
-        "paid": "المدفوع",
-        "totalCost": "الإجمالي",
-        "remaining": "الباقي",
-        "group": "مجموعة",
-        "edit": "تعديل",
-        "delete": "حذف",
-        "noDataFound": "لا توجد بيانات",
-        "adminNotes": "ملاحظات المسئول",
-        "userNotes": "ملاحظات المستخدم",
-        "logout": "تسجيل الخروج",
-        "confirmation": "تأكيد",
-        "sureToLogout": "هل أنت متأكد أنك تريد تسجيل الخروج ؟",
-        "noThanks": "لا شكرا",
-        "email": "البريد الإلكتروني",
-        "password": "كلمة المرور",
-        "login": "تسجيل الدخول",
-        "close": "إغلاق",
-        "costDetails": "تفاصيل الإجمالي",
-        "reservationPrice": "تكلفة الحجز",
-        "bedPrice": "تكلفة السرير",
-        "transportPrice": "تكلفة المواصلات",
-        "needBed": "محتاج سرير",
-        "privateTransport": "مواصلات خاصة",
-        "isChild": "طفل",
-        "searchByNameOrMobile": "بحث بالاسم او رقم الموبايل",
-        "reset": "إعادة تعيين",
-        "search": "بحث",
-        "transportationName": "المواصلات",
-        "all": "الكل",
-        "birthDateMonth": "عيد الميلاد",
-        "ageRange": "الفئة العمرية",
-        "lastUpdateDate": "تاريخ آخر تحديث",
-        "lastUpdatedBy": "آخر تحديث بواسطة",
-        "send": "إرسال",
-        "ok": "موافق",
-        "servants": "الخدام",
-        "fromAge": "من سن (عمر)",
-        "toAge": "إلي سن (عمر)"
-    },
-    "languages": {
-        "arabic": "العربية",
-        "english": "English"
-    },
-    "menu": {
-        "major": "الاشتراكات الرئيسية",
-        "all": "كل المشتركين",
-        "rooms": "الغرف",
-        "buses": "الإتوبيسات",
-        "statistics": "الإحصائيات",
-        "settings": "إعدادات",
-        "address": "العنوان",
-        "deletedMembers": "المشتركين المحذوفين"
-    },
-    "room": {
-        "add": "إضافة غرفة",
-        "building": "المبني",
-        "floor": "رقم دور الغرفة",
-        "name": "اسم الغرفة",
-        "type": "نوع الغرفة",
-        "rest": "الباقي"
-    },
-    "bus": {
-        "add": "إضافة أتوبيس"
-    },
-    "address": {
-        "add": "إضافة عنوان",
-        "title": "العنوان"
-    },
-    "notifications": {
-        "createdSuccessfully": "تمت الإضافة بنجاح",
-        "updatedSuccessfully": "تم التحديث بنجاح",
-        "removedSuccessfully": "تم الحذف بنجاح",
-        "bookedSuccessfully": "تم الحجز بنجاح",
-        "bookedUpdatedSuccessfully": "تم تعديل الحجز بنجاح",
-        "settingsSavedSuccessfully": "تم حفظ التغييرات بنجاح"
-    },
-    "validations": {
-        "requiredField": "هذا الحقل مطلوب",
-        "arabicLettersOnly": "يجب أن يكون هذا الحقل بأحرف عربية فقط",
-        "mobileNumber": "يجب أن يتكون رقم الهاتف المحمول من 11 رقمًا وأن يبدأ بـ 01 (0،1،2،5)",
-        "invalidEmailAddress": "البريد الإلكتروني غير صحيح"
-    },
-    "home": {
-        "individualBooking": "حجز فرد",
-        "groupBooking": "حجز مجموعة",
-        "arabicFullName": "الاسم ثلاثي كامل باللغة العربية",
-        "englishMobileNumber": "رقم الموبايل باللغة الإنجليزية",
-        "transportation": "المواصلات للمؤتمر"
-    },
-    "settings": {
-        "title": "اسم المؤتمر",
-        "image": "صورة المؤتمر",
-        "generalAlerts": "تنبيهات عامة",
-        "priceDetails": "قيمة الاشتراك",
-        "importantDates": "مواعيد هامة" ,
-        "startReservationDate": "بدء تاريخ للحجز",
-        "endReservationDate": "اخر تاريخ للحجز",
-        "agreeTerms": "موافق علي الشروط و ملتزم بجميع التنبيهات",
-        "waitingListMessage": "رسالة قائمة الانتظار",
-        "availableTicketsCount": "عدد التذاكر المتاحة",
-        "waitingListCount": "عدد قائمة الانتظار",
-        "reservationPrice": "سعر الحجز للبالغ",
-        "childReservationPrice": "سعر الحجز للطفل",
-        "welcomeMessage": "رسالة ترحيبية قبل بدء الحجز أو عدم وجود المؤتمرات",
-        "childReservationPriceMoreThanEight": "سعر الحجز للطفل أكبر من 8 سنوات واصغر من 12",
-        "childReservationPriceLessThanEight": "سعر الحجز للطفل أكبر من 4 سنوات واصغر من 8",
-        "childBedPrice": "سعر السرير للطفل"
-    },
-    "bookingStatus": {
-        "new": "جديد",
-        "confirmed": "مؤكد",
-        "duplicated": "مكرر",
-        "canceled": "ملغي",
-        "waiting": "قائمة الإنتظار",
-        "deleted": "محذوف"
-    },
-    "advancedFilter": {
-        "advancedFilter": "البحث المتقدم",
-        "name": "الاسم",
-        "mobile": "رقم الموبايل",
-        "filter": "بحث",
-        "reset": "إعادة تعيين"
-    },
-    "table": {
-        "mobile": "الموبايل",
-        "bookingStatus": "الحالة",
-        "adultsCount": "البالغين",
-        "childrenCount": "الأطفال"
-    }
+  "common": {
+    "dashboard": "الملخص",
+    "language": "اللغة",
+    "users": "المستخدمين",
+    "conferencesReservation": "موقع حجز المؤتمرات",
+    "name": "الاسم",
+    "birthDate": "تاريخ الميلاد",
+    "gender": "النوع",
+    "male": "ذكر",
+    "female": "أنثي",
+    "socialStatus": "الحالة الإجتماعية",
+    "married": "متزوج",
+    "single": "أعزب",
+    "widower": "أرمل",
+    "notes": "ملاحظات",
+    "addBooking": "إضافة حجز",
+    "addChild": "إضافة طفل",
+    "AddAdult": "إضافة فرد",
+    "childInfo": "من 4 : 8 سنوات (نصف إشتراك)",
+    "adultInfo": "من سن 8 سنوات فرد كامل",
+    "individual": "فرد",
+    "child": "طفل",
+    "yes": "نعم",
+    "no": "لا",
+    "needChildBed": "هل تريد سرير منفصل للطفل ؟",
+    "confirmDelete": "تأكيد الحذف",
+    "confirmBooking": "تأكيد الحجز",
+    "sureToDelete": "هل أنت متأكد أنك تريد حذف هذا العنصر ؟",
+    "sureToBook": "أنت علي وشك القيام بحجز <b> { isGrouping, select, true{مجموعة} other{فرد} } </b>",
+    "completeBooking": "هل تريد إكمال عملية الحجز ؟",
+    "cancel": "إلغاء",
+    "maximumPersons": "الحد الأقصي هو 5 أشخاص",
+    "save": "حفظ",
+    "price": "الثمن",
+    "update": "تعديل",
+    "add": "إضافة",
+    "egp": "جنيه",
+    "mobile": "رقم الموبايل",
+    "room": "الغرفة",
+    "age": "السن",
+    "bookingStatus": "حالة الحجز",
+    "total": "العدد الكلي",
+    "adultsCount": "عدد البالغين",
+    "childrenCount": "عدد الأطفال",
+    "bookingType": "نوع الحجز",
+    "bookingDate": "تاريخ الحجز",
+    "paid": "المدفوع",
+    "totalCost": "الإجمالي",
+    "remaining": "الباقي",
+    "group": "مجموعة",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "noDataFound": "لا توجد بيانات",
+    "adminNotes": "ملاحظات المسئول",
+    "userNotes": "ملاحظات المستخدم",
+    "logout": "تسجيل الخروج",
+    "confirmation": "تأكيد",
+    "sureToLogout": "هل أنت متأكد أنك تريد تسجيل الخروج ؟",
+    "noThanks": "لا شكرا",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "login": "تسجيل الدخول",
+    "close": "إغلاق",
+    "costDetails": "تفاصيل الإجمالي",
+    "reservationPrice": "تكلفة الحجز",
+    "bedPrice": "تكلفة السرير",
+    "transportPrice": "تكلفة المواصلات",
+    "needBed": "محتاج سرير",
+    "privateTransport": "مواصلات خاصة",
+    "isChild": "طفل",
+    "searchByNameOrMobile": "بحث بالاسم او رقم الموبايل",
+    "reset": "إعادة تعيين",
+    "search": "بحث",
+    "transportationName": "المواصلات",
+    "all": "الكل",
+    "birthDateMonth": "عيد الميلاد",
+    "ageRange": "الفئة العمرية",
+    "lastUpdateDate": "تاريخ آخر تحديث",
+    "lastUpdatedBy": "آخر تحديث بواسطة",
+    "send": "إرسال",
+    "ok": "موافق",
+    "servants": "الخدام",
+    "fromAge": "من سن (عمر)",
+    "toAge": "إلي سن (عمر)",
+    "roomType": "نوع الغرفة",
+    "double": "مزدوجة",
+    "triple": "ثلاثية",
+    "quad": "رباعية",
+    "childrenNotes": "يمكن إحضار الأطفال تحت سن 4 سنوات، لكن ليس لهم سرير ولا وجبات"
+  },
+  "languages": {
+    "arabic": "العربية",
+    "english": "English"
+  },
+  "menu": {
+    "major": "الاشتراكات الرئيسية",
+    "all": "كل المشتركين",
+    "rooms": "الغرف",
+    "buses": "الإتوبيسات",
+    "statistics": "الإحصائيات",
+    "settings": "إعدادات",
+    "address": "العنوان",
+    "deletedMembers": "المشتركين المحذوفين",
+    "room-type": "أنواع الغرف"
+  },
+  "room": {
+    "add": "إضافة غرفة",
+    "building": "المبني",
+    "floor": "رقم دور الغرفة",
+    "name": "اسم الغرفة",
+    "type": "نوع الغرفة",
+    "rest": "الباقي",
+    "single": "أحادية"
+  },
+  "bus": {
+    "add": "إضافة أتوبيس"
+  },
+  "roomType": {
+    "add": "إضافة نوع غرفة"
+  },
+  "address": {
+    "add": "إضافة عنوان",
+    "title": "العنوان"
+  },
+  "notifications": {
+    "createdSuccessfully": "تمت الإضافة بنجاح",
+    "updatedSuccessfully": "تم التحديث بنجاح",
+    "removedSuccessfully": "تم الحذف بنجاح",
+    "bookedSuccessfully": "تم الحجز بنجاح",
+    "bookedUpdatedSuccessfully": "تم تعديل الحجز بنجاح",
+    "settingsSavedSuccessfully": "تم حفظ التغييرات بنجاح"
+  },
+  "validations": {
+    "requiredField": "هذا الحقل مطلوب",
+    "arabicLettersOnly": "يجب أن يكون هذا الحقل بأحرف عربية فقط",
+    "mobileNumber": "يجب أن يتكون رقم الهاتف المحمول من 11 رقمًا وأن يبدأ بـ 01 (0،1،2،5)",
+    "invalidEmailAddress": "البريد الإلكتروني غير صحيح"
+  },
+  "home": {
+    "individualBooking": "حجز فرد (800 جنيه)",
+    "groupBooking": "حجز مجموعة",
+    "arabicFullName": "الاسم ثلاثي كامل باللغة العربية",
+    "englishMobileNumber": "رقم الموبايل باللغة الإنجليزية",
+    "transportation": "المواصلات للمؤتمر"
+  },
+  "settings": {
+    "title": "اسم المؤتمر",
+    "image": "صورة المؤتمر",
+    "generalAlerts": "تنبيهات عامة",
+    "priceDetails": "قيمة الاشتراك",
+    "importantDates": "مواعيد هامة",
+    "startReservationDate": "بدء تاريخ للحجز",
+    "endReservationDate": "اخر تاريخ للحجز",
+    "agreeTerms": "موافق علي الشروط و ملتزم بجميع التنبيهات",
+    "waitingListMessage": "رسالة قائمة الانتظار",
+    "availableTicketsCount": "عدد التذاكر المتاحة",
+    "waitingListCount": "عدد قائمة الانتظار",
+    "reservationPrice": "سعر الحجز للبالغ",
+    "childReservationPrice": "سعر الحجز للطفل",
+    "welcomeMessage": "رسالة ترحيبية قبل بدء الحجز أو عدم وجود المؤتمرات",
+    "childReservationPriceMoreThanEight": "سعر الحجز للطفل أكبر من 8 سنوات واصغر من 12",
+    "childReservationPriceLessThanEight": "سعر الحجز للطفل أكبر من 4 سنوات واصغر من 8",
+    "childBedPrice": "سعر السرير للطفل"
+  },
+  "bookingStatus": {
+    "new": "جديد",
+    "confirmed": "مؤكد",
+    "duplicated": "مكرر",
+    "canceled": "ملغي",
+    "waiting": "قائمة الإنتظار",
+    "deleted": "محذوف"
+  },
+  "advancedFilter": {
+    "advancedFilter": "البحث المتقدم",
+    "name": "الاسم",
+    "mobile": "رقم الموبايل",
+    "filter": "بحث",
+    "reset": "إعادة تعيين"
+  },
+  "table": {
+    "mobile": "الموبايل",
+    "bookingStatus": "الحالة",
+    "adultsCount": "البالغين",
+    "childrenCount": "الأطفال"
+  }
 }
