- Remove option to add adult for user
- Update text

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -87,7 +87,8 @@
     "double": "مزدوجة",
     "triple": "ثلاثية",
     "quad": "رباعية",
-    "childrenNotes": "يمكن إحضار الأطفال تحت سن 4 سنوات، لكن ليس لهم سرير ولا وجبات"
+    "childrenNotes": "يمكن إحضار الأطفال تحت سن 4 سنوات مجانا، لكن ليس لهم سرير ولا وجبات",
+    "addFreeChild": "إضافة طفل أقل من 4 سنوات مجانا وبدون سرير"
   },
   "languages": {
     "arabic": "العربية",
