All subscribers page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -84,11 +84,12 @@
     "fromAge": "من سن (عمر)",
     "toAge": "إلي سن (عمر)",
     "roomType": "نوع الغرفة",
-    "double": "مزدوجة",
-    "triple": "ثلاثية",
-    "quad": "رباعية",
+    "double": "غرفة مزدوجة",
+    "triple": "غرفة ثلاثية",
+    "quad": "غرفة رباعية",
     "childrenNotes": "يمكن إحضار الأطفال تحت سن 4 سنوات مجانا، لكن ليس لهم سرير ولا وجبات",
-    "addFreeChild": "إضافة طفل أقل من 4 سنوات مجانا وبدون سرير"
+    "addFreeChild": "إضافة طفل أقل من 4 سنوات مجانا وبدون سرير",
+    "reservationType": "نوع الحجز"
   },
   "languages": {
     "arabic": "العربية",
@@ -112,7 +113,7 @@
     "name": "اسم الغرفة",
     "type": "نوع الغرفة",
     "rest": "الباقي",
-    "single": "أحادية"
+    "single": "حجز فرد"
   },
   "bus": {
     "add": "إضافة أتوبيس"
