Fix price calculations

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -185,6 +185,7 @@
     "mobile": "الموبايل",
     "bookingStatus": "الحالة",
     "adultsCount": "البالغين",
-    "childrenCount": "الأطفال"
+    "childrenCount": "الأطفال",
+    "counts": "العدد"
   }
 }
